fix navbar alignment issue

--- a/src/components/organism/navbar.css
+++ b/src/components/organism/navbar.css
@@ -14,7 +14,7 @@
 
 
 
-@media (max-width:1045px){
+@media (max-width:1075px){
 
   .logo{
     padding:0px !important;
